# modjo-gtm-hack

./: .gitignore  README.md  claude-interface-mock.html  start.sh  stop.sh  tunnel.sh
claude-mock/: index.html  package-lock.json  package.json
docs/superpowers/specs/: 2026-07-09-gradbot-voice-demo-design.md  2026-07-09-prospect-call-booking-pipeline-design.md
prospect-flow/: package-lock.json  package.json
prospect-flow/app/: globals.css  layout.tsx  page.tsx
prospect-flow/app/prospect/: page.tsx
prospect-flow/components/timeline/: agent-timeline.tsx  champion-card.tsx  deck-card.tsx  email-card.tsx  fullenrich-card.tsx  landing-input.tsx  live-call-card.tsx  reasoning-line.tsx  sillage-card.tsx  status-line.tsx  sunburst.tsx  timeline-event-view.tsx  tool-card.tsx  user-prompt-bubble.tsx  web-search-card.tsx
prospect-flow/lib/: fixtures.ts  gradbot-client.ts  types.ts  use-agent-timeline.ts  use-phone-call.ts
services/: POC_HANDOFF.md  README.md  app.py  booking.py  deck.py  emailer.py  models.py  pyproject.toml
services/clients/: __init__.py  auth.py  calendar_client.py  gamma_client.py  gmail_client.py
services/static/: phone.html
services/tests/: test_booking.py  test_deck.py  test_emailer.py  test_gmail_client.py
